--- a/Bootstrap_examples/Bootstrap_examples.html
+++ b/Bootstrap_examples/Bootstrap_examples.html
@@ -39,9 +39,9 @@
                 <p>Lorem <abbr title="блок элемент модификатор">БЭМ</abbr> ipsum dolor sit amet consectetur adipisicing elit. <mark> Repellat eum quibusdam facere perferendis </mark> quidem ex repudiandae, dignissimos ea distinctio aut facilis sequi eveniet numquam blanditiis est, voluptas omnis, explicabo officiis!</p>
                 <p>Lorem <abbr title="Крупная компания">Apple</abbr> ipsum dolor sit <del>amet consectetur adipisicing</del> elit. <mark> Repellat eum quibusdam facere perferendis </mark> quidem ex repudiandae, dignissimos ea distinctio aut facilis sequi eveniet numquam blanditiis est, voluptas omnis, explicabo officiis!</p>
                 <p>Lorem ipsum dolor  <s>sit amet consectetur adipisicing elit. <mark> Repellat eum quibusdam facere perferendis </mark> quidem ex repudiandae, dignissimos ea distinctio aut facilis sequi eveniet numquam blanditiis est</s> voluptas omnis, explicabo officiis!</p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <p>Lorem ipsum dolor, <ins>sit amet consectetur adipisicing elit.</ins> Saepe aliquid tempore eaque quaerat eos dicta autem nesciunt, quas mollitia aliquam non dolorum? Libero cumque temporibus quaerat eligendi vitae. Non, fuga.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium nam blanditiis odio corrupti, nobis et ut repellendus sunt, asperiores a perferendis commodi excepturi quas <u>neque ratione dolorum. Perferendis, cupiditate sunt!</u></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eaque blanditiis beatae ipsam iure culpa animi maxime quam ipsa <small>temporibus porro, iste reiciendis cumque amet, possimus</small> sapiente autem. Ullam, reiciendis?</p>
 
             </div>
         </div>
