--- a/Bootstrap_examples/Bootstrap_examples.html
+++ b/Bootstrap_examples/Bootstrap_examples.html
@@ -42,12 +42,132 @@
                 <p>Lorem ipsum dolor, <ins>sit amet consectetur adipisicing elit.</ins> Saepe aliquid tempore eaque quaerat eos dicta autem nesciunt, quas mollitia aliquam non dolorum? Libero cumque temporibus quaerat eligendi vitae. Non, fuga.</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium nam blanditiis odio corrupti, nobis et ut repellendus sunt, asperiores a perferendis commodi excepturi quas <u>neque ratione dolorum. Perferendis, cupiditate sunt!</u></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eaque blanditiis beatae ipsam iure culpa animi maxime quam ipsa <small>temporibus porro, iste reiciendis cumque amet, possimus</small> sapiente autem. Ullam, reiciendis?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis magnam dignissimos rem aliquid aspernatur consequuntur <strong>maiores soluta velit ad iure, vitae sequi deserunt rerum ratione?</strong> Error magnam natus aliquam qui!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perferendis consequatur rerum culpa, dolorum <em>provident necessitatibus sunt in voluptas officia quam id debitis</em> odio reprehenderit eaque repellat harum ipsa nam!</p>
 
+
+                <blockquote class="blockquote">
+                  <p class="mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                  <footer class="blockquote-footer">
+                    autor
+                  </footer>
+                </blockquote>
+
+                <ul class="list-unstyled">
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+
+                  <ul class="list-inline">
+                    <li class="list-inline-item">Lorem ipsum dolor.</li>
+                    <li class="list-inline-item">Lorem ipsum dolor.</li>
+                    <li class="list-inline-item">Lorem ipsum dolor.</li>
+                    <li class="list-inline-item">Lorem ipsum dolor.</li>
+                  </ul>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                </ul>
+
+                <p>Lorem ipsum dolor sit amet,<code>&lt;section&gt;</code>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, <code>adipisicing elit.&lt;Reprehenderit temporibus&gt;</code> non cumque dicta deserunt voluptates ut.&lt; /p&gt; odio, assumenda, quo &lt;porro&gt; velit labore voluptatum officiis explicabo neque molestiae reiciendis ipsam laudantium!</p>
+
+                <p>Lorem ipsum dolor <var>x</var>=<var>y</var>+<var>z</var> dolor sit amet.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque recusandae repudiandae officia libero ea labore soluta. <kbd>CTRL</kbd>+<kbd>ALT</kbd>+<kbd>deletd</kbd>ratione iusto accusamus reiciendis animi ullam aspernatur, harum, velit numquam, alias vel.</p>
+
+
+                <table class="table table-hover table-bordered">
+                  <thead class="">
+                    <tr>
+                      <th scape="col">#</th>
+                      <th scape="col">first</th>
+                      <th scape="col">Second</th>
+                      <th scape="col">Nick</th>
+                    </tr>
+                  </thead>
+                <tbody>
+                  <tr class="table-active">
+                    <th scape="row">1</th>
+                    <th>Albert</th>
+                    <th>bob</th>
+                    <th>Rob</th>
+                  </tr>
+                  <tr class="table-primary">
+                    <th scape="row">2</th>
+                    <th>Roman</th>
+                    <th>bob</th>
+                    <th>Rob</th>
+                  </tr>
+                  <tr class="table-secondary">
+                    <th scape="row">3</th>
+                    <th>Anton</th>
+                    <th>bob</th>
+                    <th>Rob</th>
+                  </tr>
+                  <tr class="table-">
+                    <th scape="row">4</th>
+                    <th>Jon</th>
+                    <th>jack</th>
+                    <th>jack</th>
+                  </tr>
+                  <tr class="table-success">
+                    <th scape="row">4</th>
+                    <th>Jon</th>
+                    <th>jack</th>
+                    <th>jack</th>
+                  </tr>
+                  <tr class="table-danger">
+                    <th scape="row">4</th>
+                    <th>Jon</th>
+                    <th>jack</th>
+                    <th>jack</th>
+                  </tr>
+                  <tr class="table-warning">
+                    <th scape="row">4</th>
+                    <th>Jon</th>
+                    <th>jack</th>
+                    <th>jack</th>
+                  </tr>
+                  <tr class="table-info">
+                    <th scape="row">4</th>
+                    <th>Jon</th>
+                    <th>jack</th>
+                    <th>jack</th>
+                  </tr>
+                  <tr class="table-light">
+                    <th scape="row">4</th>
+                    <th>Jon</th>
+                    <th>jack</th>
+                    <th>jack</th>
+                  </tr>
+                  <tr class="table-dark">
+                    <th scape="row">4</th>
+                    <th>Jon</th>
+                    <th>jack</th>
+                    <th>jack</th>
+                  </tr>
+                </tbody>
+              </table>
+
+              <figure class="figure">
+                <img src="img/1.png" alt="" class="figure-img img-fluid rounded">
+                <fieldset class="figure-caption text-right">
+                  картина
+                </fieldset>
+              </figure>
+
+              <img src="img/1.jpg" alt="" class="rounded img-fluid float-right">
             </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
   </body>
 </html>
